docs: update jwt
